# planeswalker_companion

./: .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  agent.py  app.py  app.yaml  app_test.py  compose.yml  docker-compose.yml  notes.md  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: main.yml
.streamlit/: config.toml
configs/: config_example.yaml
data/architecture/: dataflow nissa.drawio
data/artifacts/: card_db.p
data/cards/: scryfall_all_cards_with_rulings_sample.json
data/raw/: scryfall_all_cards_with_rulings.json
mtg/agents/: __init__.py  agent_template.py  judge.py  nissa.py  user.py
mtg/bot/: __init__.py  chat.py  chat_history.py  intent_classification.py  lang_chain.py  langchain.py  magic_gpt.py  mtg_chain.py
mtg/data_handler/: __init__.py  card_database.py  data_service.py  process_reddit_data.py  process_scryfall_data.py  spacy_utils.py  vector_db.py
mtg/history/: __init__.py  chat_history.py  data_service.py  spacy_utils.py
mtg/objects/: __init__.py  card.py  document.py  message.py  rule.py
mtg/tools/: __init__.py  call_judge_tool.py  card_search_tool.py  deck_search_tool.py  judge_report_tool.py  rules_search_tool.py
mtg/training/: ner_training.py
mtg/utils/: __init__.py  config.py  logging.py  ui.py  url_parsing.py  utils.py
mtg/views/: contact_page.py  rules_page.py
mtg/views/chat/: chat_interface.py  chat_page.py  cookie_handler.py  deck_upload.py  sidebar.py
mtg/views/info/: info_page.py
notebooks/: TODO.md  create_test_data.py  embeddings.py  evaluation.ipynb  evaluation_dataset.ipynb  evaluation_ragas.ipynb  quickstart_data_service.ipynb
src/mtg/agents/: __init__.py  agent_template.py  chat_agent.py  judge.py  nissa.py
src/mtg/tools/: __init__.py  call_judge_tool.py  card_search_tool.py  deck_search_tool.py  judge_report_tool.py  rules_search_tool.py
src/mtg/utils/: logging.py  ui.py  utils.py
tests/: conftest.py
tests/bot/: test_qa.py
tests/data/: cards.json
tests/data_handler/: test_card_db.py  test_vector_db.py
