[tool.poetry]
name = "planeswalker-companion"
version = "0.1.0"
description = ""
authors = ["florian.krempl <florian.krempl@outlook.com>"]
license = "mit"
readme = "README.md"
packages = [{from ="src", include = "mtg" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
spacy = "^3.6.1"
spaczz = "^0.6.0"
spacy-lookups-data = "^1.0.5"
tiktoken = "^0.5.1"
pydantic = "^2.5.3"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
streamlit = "^1.35.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
ragas = "^0.1.1"
ipykernel = "^6.25.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
