[tool.poetry]
name = "planeswalker-companion"
version = "0.1.0"
description = ""
authors = ["florian.krempl <florian.krempl@outlook.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "mtg" }]

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.6.1"
spaczz = "^0.6.0"
spacy-lookups-data = "^1.0.5"
tiktoken = "^0.8.0"
pydantic = "^2.5.3"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
streamlit = "^1.37.0"
python-dotenv = "^1.0.1"
langfuse = "^2.55.0"
streamlit-cookies-controller = "^0.0.4"
numpy = "^1.22.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
ragas = "^0.1.1"
ipykernel = "^6.25.1"
tqdm = "^4.66.1"
ruff = "^0.8.1"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
