[tool.poetry]
name = "planeswalker-companion"
version = "0.1.0"
description = ""
authors = ["florian.krempl <florian.krempl@outlook.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "mtg" }]

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.6.1"
spaczz = "^0.6.0"
spacy-lookups-data = "^1.0.5"
tiktoken = "^0.8.0"
pydantic = "^2.5.3"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
streamlit = "^1.40.0"
python-dotenv = "^1.0.1"
langfuse = "^2.55.0"
streamlit-cookies-controller = "^0.0.4"
numpy = "^1.22.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
ragas = "^0.2.7"
ipykernel = "^6.25.1"
tqdm = "^4.66.1"
ruff = "^0.8.1"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tryhard.py", 
    "app_test.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"